// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClutchParser parenthesized extra parens 1`] = `
"GroupExpression:
  Expression:
    GroupExpression:
      Expression:
        <#a>
"
`;

exports[`ClutchParser parenthesized simple 1`] = `
"GroupExpression:
  Expression:
    <#a>
"
`;

exports[`ClutchParser parenthesized with a binary expression 1`] = `
"GroupExpression:
  Expression:
    BinaryExpression:
      Left:
        <#a>
      Operator: +
      Right:
        <#b>
"
`;

exports[`ClutchParser parenthesized with a postfix expression 1`] = `
"GroupExpression:
  Expression:
    UnaryExpression:
      Target:
        <#a>
      Operator: -- (Postfix)
"
`;

exports[`ClutchParser parenthesized with a prefix expression 1`] = `
"UnaryExpression:
  Target:
    GroupExpression:
      Expression:
        UnaryExpression:
          Target:
            <#a>
          Operator: -- (Prefix)
  Operator: -- (Postfix)
"
`;

exports[`ClutchParser should parse and print binary a != b 1`] = `
"BinaryExpression:
  Left:
    <#a>
  Operator: !=
  Right:
    <#b>
"
`;

exports[`ClutchParser should parse and print binary a !== b 1`] = `
"BinaryExpression:
  Left:
    <#a>
  Operator: !==
  Right:
    <#b>
"
`;

exports[`ClutchParser should parse and print binary a % b 1`] = `
"BinaryExpression:
  Left:
    <#a>
  Operator: %
  Right:
    <#b>
"
`;

exports[`ClutchParser should parse and print binary a %= b 1`] = `
"BinaryExpression:
  Left:
    <#a>
  Operator: %=
  Right:
    <#b>
"
`;

exports[`ClutchParser should parse and print binary a && b 1`] = `
"BinaryExpression:
  Left:
    <#a>
  Operator: &&
  Right:
    <#b>
"
`;

exports[`ClutchParser should parse and print binary a * b 1`] = `
"BinaryExpression:
  Left:
    <#a>
  Operator: *
  Right:
    <#b>
"
`;

exports[`ClutchParser should parse and print binary a *= b 1`] = `
"BinaryExpression:
  Left:
    <#a>
  Operator: *=
  Right:
    <#b>
"
`;

exports[`ClutchParser should parse and print binary a + b 1`] = `
"BinaryExpression:
  Left:
    <#a>
  Operator: +
  Right:
    <#b>
"
`;

exports[`ClutchParser should parse and print binary a += b 1`] = `
"BinaryExpression:
  Left:
    <#a>
  Operator: +=
  Right:
    <#b>
"
`;

exports[`ClutchParser should parse and print binary a . b 1`] = `
"BinaryExpression:
  Left:
    <#a>
  Operator: .
  Right:
    <#b>
"
`;

exports[`ClutchParser should parse and print binary a / b 1`] = `
"BinaryExpression:
  Left:
    <#a>
  Operator: /
  Right:
    <#b>
"
`;

exports[`ClutchParser should parse and print binary a /= b 1`] = `
"BinaryExpression:
  Left:
    <#a>
  Operator: /=
  Right:
    <#b>
"
`;

exports[`ClutchParser should parse and print binary a < b 1`] = `
"BinaryExpression:
  Left:
    <#a>
  Operator: <
  Right:
    <#b>
"
`;

exports[`ClutchParser should parse and print binary a <= b 1`] = `
"BinaryExpression:
  Left:
    <#a>
  Operator: <=
  Right:
    <#b>
"
`;

exports[`ClutchParser should parse and print binary a = b 1`] = `
"BinaryExpression:
  Left:
    <#a>
  Operator: =
  Right:
    <#b>
"
`;

exports[`ClutchParser should parse and print binary a == b 1`] = `
"BinaryExpression:
  Left:
    <#a>
  Operator: ==
  Right:
    <#b>
"
`;

exports[`ClutchParser should parse and print binary a === b 1`] = `
"BinaryExpression:
  Left:
    <#a>
  Operator: ===
  Right:
    <#b>
"
`;

exports[`ClutchParser should parse and print binary a > b 1`] = `
"BinaryExpression:
  Left:
    <#a>
  Operator: >
  Right:
    <#b>
"
`;

exports[`ClutchParser should parse and print binary a >= b 1`] = `
"BinaryExpression:
  Left:
    <#a>
  Operator: >=
  Right:
    <#b>
"
`;

exports[`ClutchParser should parse and print binary a || b 1`] = `
"BinaryExpression:
  Left:
    <#a>
  Operator: ||
  Right:
    <#b>
"
`;

exports[`ClutchParser should parse and print binary a - b 1`] = `
"BinaryExpression:
  Left:
    <#a>
  Operator: -
  Right:
    <#b>
"
`;

exports[`ClutchParser should parse and print binary a -= b 1`] = `
"BinaryExpression:
  Left:
    <#a>
  Operator: -=
  Right:
    <#b>
"
`;

exports[`ClutchParser should parse and print literal 
          Hello
          World!
         1`] = `
"<#Hello>
"
`;

exports[`ClutchParser should parse and print literal 'Hello' 1`] = `
"<Hello>
"
`;

exports[`ClutchParser should parse and print literal 1 1`] = `
"<1>
"
`;

exports[`ClutchParser should parse and print literal 1.5 1`] = `
"<1.5>
"
`;

exports[`ClutchParser should parse and print literal 3.14 1`] = `
"<3.14>
"
`;

exports[`ClutchParser should parse and print literal 30.4 1`] = `
"<30.4>
"
`;

exports[`ClutchParser should parse and print literal false 1`] = `
"<false>
"
`;

exports[`ClutchParser should parse and print literal fooBar 1`] = `
"<#fooBar>
"
`;

exports[`ClutchParser should parse and print literal true 1`] = `
"<#true>
"
`;

exports[`ClutchParser should parse and print unary (postfix) a ++ 1`] = `
"UnaryExpression:
  Target:
    <#a>
  Operator: ++ (Postfix)
"
`;

exports[`ClutchParser should parse and print unary (postfix) a -- 1`] = `
"UnaryExpression:
  Target:
    <#a>
  Operator: -- (Postfix)
"
`;

exports[`ClutchParser should parse and print unary (prefix) ! a 1`] = `
"UnaryExpression:
  Target:
    <#a>
  Operator: ! (Prefix)
"
`;

exports[`ClutchParser should parse and print unary (prefix) + a 1`] = `
"UnaryExpression:
  Target:
    <#a>
  Operator: + (Prefix)
"
`;

exports[`ClutchParser should parse and print unary (prefix) ++ a 1`] = `
"UnaryExpression:
  Target:
    <#a>
  Operator: ++ (Prefix)
"
`;

exports[`ClutchParser should parse and print unary (prefix) - a 1`] = `
"UnaryExpression:
  Target:
    <#a>
  Operator: - (Prefix)
"
`;

exports[`ClutchParser should parse and print unary (prefix) -- a 1`] = `
"UnaryExpression:
  Target:
    <#a>
  Operator: -- (Prefix)
"
`;
